order-cancellation/demo/config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - '*.cloudylabs.dev'  
      - cloudylabs.dev
      secretName: tls-secret
  rules:
    - host: api.cloudylabs.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-ingress-dapr
              servicePort: 80
    - host: viewer.cloudylabs.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: cancel-order-viewer
              servicePort: 80
